--- a/index.html/index.html
+++ b/index.html/index.html
@@ -1,4 +1,4 @@
-<header>ALURAFLIX</header>
+<header>genshin </header>
 
-<h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
-#homem-aranha
+<h1>reunião fatuis<h1>
+    
